Fixed tags overflow issue

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -137,6 +137,10 @@ h1, h2, h3, h4, h5, h6 {
     margin-right: 5px;
 }
 
+.tag-label {
+    display: inline-block;
+}
+
 /* Overrides */
 .panel-heading {
     overflow: hidden;
